--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: echo hello
   deploy:
     docker:
-      - image: cimg/ruby@3.1.0
+      - image: cimg/ruby:3.1.0
     steps:
       - run:
           name: world
